# barb

./: .env.example  .gitignore  Caddyfile  Dockerfile  claude.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.toml
.claude/: settings.json
.claude/agents/: architect.md  audit-verifier.md  backend-reviewer.md  code-reviewer.md  doc-auditor.md  frontend-reviewer.md  test-writer.md
.claude/commands/: add-function.md  audit-docs.md  health.md  refactor.md  review.md  test.md
.github/workflows/: deploy.yml
api/: __init__.py  auth.py  barb.py  config.py  db.py  errors.py  main.py  request_id.py
api/agent/: __init__.py  analyst.py  executor.py  prompts.py
assistant/: chat.py  context.py  prompt.py  tools.py
barb/: data.py  expressions.py  functions.py  interpreter.py  ops.py  validation.py
config/: __init__.py  models.py
docs/: backend-foundation.md  barb-assistant-architecture.md  barb-script-catalog.md  barb-script-indicators.md  barb-script-spec.md  chat-implementation.md  cline.md  code-review-fixes.md  e2e-scenarios.md  llm-requirements.md  understand-phase.md
front/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
scripts/: analyze_sessions.py  compare_daily.py  convert_data.py  e2e.py  e2e_scenarios.py  export_conversation.py  scrape_reddit.py  test_gemini_barb.py  test_haiku.py  test_haiku_barb.py  test_hard_scenario.py  test_openai.py  tv_reference.pine  tv_reference_table.pine  update_data.py  upload_instruments.py
tests/: conftest.py  run_batch.py  run_semantic.py  test_api.py  test_auth.py  test_backend_foundation.py  test_backtest.py  test_barb.py  test_chat_helpers.py  test_context.py  test_data_blocks.py  test_events.py  test_expressions.py  test_functions.py  test_holidays.py  test_instruments.py  test_interpreter.py  test_models_config.py  test_prompt.py  test_reference.py  test_tools.py  test_validation.py
(+260 files in other folders)
