[project]
name = "barb"
version = "0.1.0"
description = "Trading analytics assistant with AI-powered analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pandas>=2.0.0",
    "pyarrow>=18.0.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "supabase>=2.0.0",
    "pyjwt[crypto]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["api*", "assistant*", "barb*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["scripts/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"assistant/prompt.py" = ["E501"]
"assistant/tools/execute.py" = ["E501"]
"assistant/tools/understand.py" = ["E501"]
"assistant/tools/reference.py" = ["E501"]
"config/market/events.py" = ["E501", "E402"]
"config/market/instruments.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
